[package]
name = "lib-hearts"
authors = ["Nordine Bittich"]
description = "Basic Implementation of the hearts card game"
keywords = ["cards"]
repository = "https://github.com/nbittich/lib-hearts"
version = "0.1.28"
edition = "2021"
readme = "README.md"
license = "MIT"
[dependencies]
rand = "0.8.5"
serde = { version = "1.0.188" }
serde_derive = { version = "1.0.188" }
uuid = { version = "1.4.1", features = ["serde"] }
[dev-dependencies]
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4"] }
