[package]
name = "lib-hearts"
authors = ["Nordine Bittich"]
description = "Basic Implementation of the hearts card game"
keywords = ["cards"]
repository = "https://github.com/nbittich/lib-hearts"
version = "0.1.28"
edition = "2021"
readme = "README.md"
license = "MIT"
[dependencies]
rand = "0.8.5"
serde = "1.0.189"
serde-big-array-options = "0.1.1"
serde_derive = "1.0.189"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
[dev-dependencies]
serde_json = "1.0.107"
